[package]
name = "rusted-iron"
version = "0.0.2"
authors = ["Maksym Shekhovets <maximsh@interlink-ua.com>"]

[dependencies]
rand = "0.4"
uuid = { version = "0.6", features = ["serde", "v5"] }
rocket = "0.3.6"
rocket_codegen = "0.3.6"
redis = "0.8"
r2d2 = "0.8"
r2d2_redis = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
