[package]
name = "rusted-iron"
version = "0.0.4"
authors = ["Maksym Shekhovets <maximsh@interlink-ua.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
redis = "0.8"
r2d2 = "0.8"
r2d2_redis = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
objectid = { version = "^0.2", features = ["serde"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
