[package]
name = "rusted-iron"
version = "0.1.6"
authors = ["Maksym Shekhovets <maximsh@interlink-ua.com>"]
publish = false

[dependencies]
gotham = "0.2.0"
gotham_derive = "0.2.0"
redis = "0.8"
r2d2 = "0.8"
r2d2_redis = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
objectid = { version = "^0.2", features = ["serde"] }
hyper = "0.11"
futures = "0.1"
tokio = "0.1"
log = "0.4.1"
env_logger = "0.5.5"
mime = "0.3.5"
rayon = "1.0.0"
