[package]
name = "web"
version = "0.1.13"
authors = ["Maksym Shekhovets <maximsh@interlink-ua.com>"]
publish = false

[dependencies]
gotham = "0.2.1"
gotham_derive = "0.2.1"
redis = "0.9.0"
r2d2 = "0.8"
r2d2_redis = { git = "https://github.com/RustMQ/r2d2-redis", branch = "update-connection-validation" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
objectid = { version = "^0.2", features = ["serde"] }
hyper = "0.11"
futures = "0.1"
tokio = "0.1"
log = "0.4.1"
env_logger = "0.5"
mime = "0.3.5"
num_cpus = "1.0"
scheduled-thread-pool = "0.2.0"
bcrypt = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde-redis = { git = "https://github.com/RustMQ/serde-redis.git", branch = "update-redis" }
queue = { path = "../queue" }
failure = "0.1"
